--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <div class="swiper">
+    <div class="swiper-button-prev">
+
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="slide-card">
@@ -32,6 +34,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
 
             <div class="swiper-slide">
